some feedback addressed